--- a/package.json
+++ b/package.json
@@ -9,14 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@reduxjs/toolkit": "^2.2.5",
+    "@types/react-modal": "^3.16.3",
     "axios": "^1.7.2",
     "jwt-decode": "^4.0.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
+    "react-modal": "^3.16.1",
     "react-redux": "^9.1.2",
+    "react-responsive-carousel": "^3.2.23",
     "sonner": "^1.4.41"
   },
   "devDependencies": {
