--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_BACKEND_API_URL=http://localhost:5000/api/v1
+NEXT_PUBLIC_BACKEND_API_URL=https://flat-share-server-zeta.vercel.app/api/v1
 IMAGE_UPLOAD_TOKEN=1b855a210951a3b9355ee01e3703dbbc
