--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
+    "react-icons": "^5.2.1",
     "react-modal": "^3.16.1",
     "react-redux": "^9.1.2",
     "react-responsive-carousel": "^3.2.23",
+    "sharp": "^0.33.4",
     "sonner": "^1.4.41"
   },
   "devDependencies": {
