--- a/package.json
+++ b/package.json
@@ -25,13 +25,16 @@
     "react-modal": "^3.16.1",
     "react-redux": "^9.1.2",
     "react-responsive-carousel": "^3.2.23",
+    "react-slick": "^0.30.2",
     "sharp": "^0.33.4",
+    "slick-carousel": "^1.8.1",
     "sonner": "^1.4.41"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "daisyui": "^4.11.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
